# mkpms

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  kernel
kpms/anti-detect/: CMakeLists.txt  anti-detect.c
kpms/demo-hello/: Makefile  hello.c
kpms/hide-maps/: hidemaps.c
kpms/wxshadow/: CMakeLists.txt  README.md  test_pmd_split.c  wxshadow.c  wxshadow.h  wxshadow_bp.c  wxshadow_client.c  wxshadow_handlers.c  wxshadow_internal.h  wxshadow_pgtable.c  wxshadow_scan.c
kpms/wxshadow/scripts/: run_device_race_regression.sh  wxshadow_race.sh
tools/kpatch/: kpatch.c
